--- a/styles/globals.css
+++ b/styles/globals.css
@@ -185,6 +185,10 @@
     --lilac-border: #f5efd8;
   }
 
+  .media-kit-gradient {
+    background: linear-gradient(180deg, rgba(252, 252, 252, 0.00) 0%, #FCFCFC 49.5%);
+  }
+
   .performance {
 		-webkit-transform: translateZ(0);
 		backface-visibility: hidden;
@@ -215,6 +219,16 @@
 
   .secondary-font {
     font-family: var(--font-secondary);
+  }
+
+  .title-style {
+    font-size: 60px;
+    line-height: 1.2;
+
+    /* max media query for lg tailwind size */
+    @media (max-width: 1024px) {
+      font-size: 40px;
+    }
   }
 
   .light {
